--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="font_size">22sp</dimen>
+    <dimen name="menu_font_size">16sp</dimen>
     <dimen name="main_padding_horizontal">16dp</dimen>
     <dimen name="main_padding_vertical">14dp</dimen>
     <dimen name="btn_padding_bottom">16dp</dimen>
     <dimen name="btn_border_radios">16dp</dimen>
     <dimen name="btn_icon_padding">8dp</dimen>
+    <dimen name="menu_padding_vertical">21dp</dimen>
+    <dimen name="icon_size">24dp</dimen>
 </resources>
