--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,7 @@
         android:textSize="@dimen/font_size"/>
 
     <Button
+        android:id="@+id/btn_search"
         android:layout_marginTop="40dp"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -34,6 +35,7 @@
         />
 
     <Button
+        android:id="@+id/btn_library"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
@@ -50,6 +52,7 @@
         />
 
     <Button
+        android:id="@+id/btn_setting"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
