--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -10,15 +10,36 @@
     android:paddingVertical="@dimen/main_padding_vertical"
     android:orientation="vertical">
 
-    <com.google.android.material.appbar.MaterialToolbar
-        android:id="@+id/title"
+<!--    <com.google.android.material.appbar.MaterialToolbar-->
+<!--        android:id="@+id/title"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        app:title="@string/btn_search"-->
+<!--        app:navigationIcon="@drawable/arrow_back"-->
+<!--        app:contentInsetStartWithNavigation="@dimen/margin_icon_navigation"-->
+<!--        app:titleTextColor="@color/text_color"-->
+<!--        app:titleTextAppearance="@style/titleText"-->
+<!--        />-->
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:title="@string/btn_search"
-        app:navigationIcon="@drawable/arrow_back"
-        app:contentInsetStartWithNavigation="@dimen/margin_icon_navigation"
-        app:titleTextColor="@color/text_color"
-        app:titleTextAppearance="@style/titleText"
-        />
+        android:orientation="horizontal"
+        android:gravity="center_vertical">
+
+        <ImageView
+            android:id="@+id/arrow_back"
+            android:layout_width="@dimen/icon_size"
+            android:layout_height="@dimen/icon_size"
+            android:src="@drawable/arrow_back" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="28dp"
+            android:text="@string/btn_search"
+            android:textColor="@color/text_color"
+            android:textSize="@dimen/font_size"/>
+    </LinearLayout>
 
 </LinearLayout>
