--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -6,22 +6,43 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    android:paddingHorizontal="0dp"
+    android:paddingHorizontal="@dimen/main_padding_horizontal"
     android:paddingVertical="@dimen/main_padding_vertical"
     android:orientation="vertical">
 
 
-    <com.google.android.material.appbar.MaterialToolbar
-        app:contentInsetStart="0dp"
-        android:id="@+id/title"
+<!--    <com.google.android.material.appbar.MaterialToolbar-->
+<!--        app:contentInsetStart="0dp"-->
+<!--        android:id="@+id/title"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        app:title="@string/btn_setting"-->
+<!--        app:navigationIcon="@drawable/arrow_back"-->
+<!--        app:contentInsetStartWithNavigation="@dimen/margin_icon_navigation"-->
+<!--        app:titleTextColor="@color/text_color"-->
+<!--        app:titleTextAppearance="@style/titleText"-->
+<!--        />-->
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:title="@string/btn_setting"
-        app:navigationIcon="@drawable/arrow_back"
-        app:contentInsetStartWithNavigation="@dimen/margin_icon_navigation"
-        app:titleTextColor="@color/text_color"
-        app:titleTextAppearance="@style/titleText"
-        />
+        android:orientation="horizontal"
+        android:gravity="center_vertical">
+
+        <ImageView
+            android:id="@+id/arrow_back"
+            android:layout_width="@dimen/icon_size"
+            android:layout_height="@dimen/icon_size"
+            android:src="@drawable/arrow_back" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="28dp"
+            android:text="@string/btn_setting"
+            android:textColor="@color/text_color"
+            android:textSize="@dimen/font_size"/>
+    </LinearLayout>
 
     <com.google.android.material.switchmaterial.SwitchMaterial
         android:layout_marginTop="19dp"
@@ -32,7 +53,12 @@
         android:paddingVertical="@dimen/menu_padding_vertical"
         android:text="@string/setting_theme"
         android:textColor="@color/black"
-        android:textSize="@dimen/menu_font_size" />
+        android:textSize="@dimen/menu_font_size"
+        app:thumbTint="#AEAFB4"
+        style="@style/switchStyle"
+        app:useMaterialThemeColors="false"
+
+        />
 
 
     <com.google.android.material.textview.MaterialTextView
