--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="main_background">#3772E7</color>
     <color name="text_color">#1A1B22</color>
+    <color name="thumb_color">#AEAFB4</color>
+    <color name="track_color">#E6E8EB</color>
 </resources>
