--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -47,6 +47,7 @@
     </LinearLayout>
 
     <com.google.android.material.switchmaterial.SwitchMaterial
+        android:id="@+id/switch_themes"
         android:layout_marginTop="19dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -56,7 +57,7 @@
         android:text="@string/setting_theme"
         android:textColor="@color/black"
         android:textSize="@dimen/menu_font_size"
-        style="@style/switchStyle"
+        style="@style/switchStyleLight"
         app:useMaterialThemeColors="false"
 
         />
