--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,8 @@
     <color name="white">#FFFFFFFF</color>
     <color name="main_background">#3772E7</color>
     <color name="text_color">#1A1B22</color>
-    <color name="thumb_color">#AEAFB4</color>
-    <color name="track_color">#E6E8EB</color>
+    <color name="thumb_color_light">#AEAFB4</color>
+    <color name="thumb_color_dark">#3772E7</color>
+    <color name="track_color_light">#E6E8EB</color>
+    <color name="track_color_dark">#9FBBF3</color>
 </resources>
