--- a/app/src/main/res/layout/activity_library.xml
+++ b/app/src/main/res/layout/activity_library.xml
@@ -1,26 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+
     android:id="@+id/activity_library"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
-    android:paddingHorizontal="@dimen/main_padding_horizontal"
-    android:paddingVertical="@dimen/main_padding_vertical"
-    android:orientation="vertical">
-
-<!--    <com.google.android.material.appbar.MaterialToolbar-->
-<!--        android:id="@+id/title"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        app:title="@string/btn_library"-->
-<!--        app:navigationIcon="@drawable/arrow_back"-->
-<!--        app:contentInsetStartWithNavigation="@dimen/margin_icon_navigation"-->
-<!--        app:titleTextColor="@color/text_color"-->
-<!--        app:titleTextAppearance="@style/titleText"-->
-<!--        android:paddingTop="@dimen/main_padding_vertical"-->
-<!--        />-->
+    style="@style/mainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -30,17 +14,15 @@
 
         <ImageView
             android:id="@+id/arrow_back"
-            android:layout_width="@dimen/icon_size"
-            android:layout_height="@dimen/icon_size"
-            android:src="@drawable/arrow_back" />
+            android:src="@drawable/arrow_back"
+            style="@style/imageInTitleActivity"
+            />
 
         <TextView
+            android:text="@string/btn_library"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="28dp"
-            android:text="@string/btn_library"
-            android:textColor="@color/text_color"
-            android:textSize="@dimen/font_size"/>
+            style="@style/titleActivity"/>
     </LinearLayout>
 
 </LinearLayout>
