--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,29 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_setting"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
-    android:paddingHorizontal="@dimen/main_padding_horizontal"
-    android:paddingVertical="@dimen/main_padding_vertical"
-    android:orientation="vertical">
-
-
-<!--    <com.google.android.material.appbar.MaterialToolbar-->
-<!--        app:contentInsetStart="0dp"-->
-<!--        android:id="@+id/title"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        app:title="@string/btn_setting"-->
-<!--        app:navigationIcon="@drawable/arrow_back"-->
-<!--        app:contentInsetStartWithNavigation="@dimen/margin_icon_navigation"-->
-<!--        app:titleTextColor="@color/text_color"-->
-<!--        app:titleTextAppearance="@style/titleText"-->
-<!--        />-->
-
-
+    style="@style/mainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -33,17 +14,14 @@
 
         <ImageView
             android:id="@+id/arrow_back"
-            android:layout_width="@dimen/icon_size"
-            android:layout_height="@dimen/icon_size"
-            android:src="@drawable/arrow_back" />
+            android:src="@drawable/arrow_back"
+            style="@style/imageInTitleActivity"/>
 
         <TextView
+            android:text="@string/btn_setting"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="28dp"
-            android:text="@string/btn_setting"
-            android:textColor="@color/text_color"
-            android:textSize="@dimen/font_size"/>
+            style="@style/titleActivity"/>
     </LinearLayout>
 
     <com.google.android.material.switchmaterial.SwitchMaterial
@@ -52,45 +30,32 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
-
         android:paddingVertical="@dimen/menu_padding_vertical"
         android:text="@string/setting_theme"
-        android:textColor="@color/black"
-        android:textSize="@dimen/menu_font_size"
-        style="@style/switchStyleLight"
+        android:textColor = "?attr/colorPrimary"
         app:useMaterialThemeColors="false"
-
-        />
+        style="@style/switchStyle"/>
 
 
     <com.google.android.material.textview.MaterialTextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:drawableEnd="@drawable/shared"
-
-        android:textColor="@color/black"
-        android:paddingVertical="@dimen/menu_padding_vertical"
         android:text="@string/setting_shared"
-        android:textSize="@dimen/menu_font_size" />
+        style="@style/itemMenuSetting" />
 
     <com.google.android.material.textview.MaterialTextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:drawableEnd="@drawable/support"
-
-        android:textColor="@color/black"
-        android:paddingVertical="@dimen/menu_padding_vertical"
         android:text="@string/setting_support"
-        android:textSize="@dimen/menu_font_size" />
+        style="@style/itemMenuSetting" />
 
     <com.google.android.material.textview.MaterialTextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:drawableEnd="@drawable/arrow_forward"
-
-        android:textColor="@color/black"
-        android:paddingVertical="@dimen/menu_padding_vertical"
         android:text="@string/setting_agreement"
-        android:textSize="@dimen/menu_font_size" />
+        style="@style/itemMenuSetting" />
 
 </LinearLayout>
