--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,7 @@
         android:text="@string/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor = "@color/white"
         style="@style/baseFont"/>
 
     <Button
