--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,6 +30,8 @@
     </style>
 
     <style name="titleActivity" parent="baseFont">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginStart">@dimen/margin_icon_navigation</item>
         <item name="android:textColor">?attr/colorPrimary</item>
     </style>
@@ -49,6 +51,8 @@
     </style>
 
     <style name="itemMenuSetting" parent="Widget.MaterialComponents.TextView">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">?attr/colorPrimary</item>
         <item name="android:paddingVertical">@dimen/menu_padding_vertical</item>
         <item name="android:textSize">@dimen/menu_font_size</item>
