--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -2,4 +2,5 @@
 <resources>
     <attr name="mainActivityBackground" format="reference|color"/>
     <attr name="settingIconColor" format="reference|color"/>
+    <attr name="editTextIconColor" format="reference|color"/>
 </resources>
