--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,6 +10,10 @@
     <dimen name="menu_padding_vertical">21dp</dimen>
     <dimen name="icon_size">24dp</dimen>
     <dimen name="margin_icon_navigation">28dp</dimen>
-    <dimen name="font_title_weight">500</dimen>
-    <dimen name="font_item_weight">400</dimen>
+    <dimen name="search_height">36dp</dimen>
+    <dimen name="search_margin_vertical">8dp</dimen>
+    <dimen name="search_padding_vertical">12dp</dimen>
+    <dimen name="search_edit_padding_horizontal">24dp</dimen>
+    <dimen name="search_icon_size">16dp</dimen>
+    <dimen name="search_max_lines">1</dimen>
 </resources>
