--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="thumb_color_dark">#3772E7</color>
     <color name="track_color_light">#E6E8EB</color>
     <color name="track_color_dark">#9FBBF3</color>
+    <color name="edit_background_light">#E6E8EB</color>
 </resources>
