--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -59,4 +59,20 @@
         <item name="android:fontFamily">@font/ys_display_regular</item>
         <item name="android:textFontWeight">400</item>
     </style>
+
+    <style name="iconSearch">
+        <item name="android:layout_width">@dimen/search_icon_size</item>
+        <item name="android:layout_height">@dimen/search_icon_size</item>
+        <item name="android:tint">?attr/editTextIconColor</item>
+    </style>
+
+    <style name="editTextSearch" parent="baseFont">
+        <item name="android:paddingHorizontal">@dimen/search_edit_padding_horizontal</item>
+        <item name="android:textSize">@dimen/menu_font_size</item>
+        <item name="android:textFontWeight">400</item>
+        <item name="android:background">@null</item>
+        <item name="android:textColorHint">?attr/editTextIconColor</item>
+        <item name="android:textColor">@color/blackish_blue</item>
+        <item name="android:layout_gravity">center_vertical</item>
+    </style>
 </resources>
