refracting activity_setting

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,6 +10,7 @@
     <dimen name="menu_padding_vertical">21dp</dimen>
     <dimen name="icon_size">24dp</dimen>
     <dimen name="margin_icon_navigation">28dp</dimen>
+    <dimen name="setting_switch_margin_top">19dp</dimen>
     <dimen name="search_height">36dp</dimen>
     <dimen name="search_margin_vertical">8dp</dimen>
     <dimen name="search_padding_vertical">12dp</dimen>
