--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -24,7 +24,7 @@
 
     <com.google.android.material.switchmaterial.SwitchMaterial
         android:id="@+id/switch_themes"
-        android:layout_marginTop="19dp"
+        android:layout_marginTop="@dimen/setting_switch_margin_top"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
