--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,7 +12,7 @@
         <item name="android:orientation">vertical</item>
     </style>
 
-    <style name="buttonMenu">
+    <style name="buttonMenu" parent="Widget.MaterialComponents.Button.UnelevatedButton">
         <item name="android:layout_height">0dp</item>
         <item name="android:layout_weight">1</item>
         <item name="android:layout_marginBottom">@dimen/btn_padding_bottom</item>
@@ -26,7 +26,7 @@
         <item name="android:fontFamily">@font/ys_display_medium</item>
         <item name="android:textFontWeight">700</item>
         <!-- Стиль тени -->
-        <item name="android:outlineSpotShadowColor">@color/black</item>
+<!--        <item name="android:outlineSpotShadowColor">@color/black</item>-->
     </style>
 
     <style name="titleActivity" parent="baseFont">
