--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -47,35 +47,23 @@
             android:src="@drawable/clear"
             android:visibility="gone"
             style="@style/iconSearch"/>
-
     </FrameLayout>
 
-<!--    <com.google.android.material.textfield.TextInputLayout-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_margin="16dp"-->
-<!--        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"-->
-<!--        app:boxBackgroundColor="#E6E8EB"-->
-<!--        app:boxCornerRadiusTopStart="16dp"-->
-<!--        app:boxCornerRadiusTopEnd="16dp"-->
-<!--        app:boxCornerRadiusBottomStart="16dp"-->
-<!--        app:boxCornerRadiusBottomEnd="16dp"-->
-<!--        app:startIconDrawable="@drawable/search"-->
-<!--        app:startIconTint="#9E9E9E"-->
-<!--        app:endIconMode="clear_text"-->
-<!--        app:endIconDrawable="@android:drawable/ic_menu_close_clear_cancel"-->
-<!--        app:endIconTint="#9E9E9E"-->
-<!--        app:hintTextColor="#9E9E9E">-->
 
-<!--        <com.google.android.material.textfield.TextInputEditText-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:hint="Поиск"-->
-<!--            android:textColor="#000000"-->
-<!--            android:textColorHint="#9E9E9E"-->
-<!--            android:inputType="text"/>-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp">
 
-<!--    </com.google.android.material.textfield.TextInputLayout>-->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/trackRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+
+    </LinearLayout>
+
 
 
 
