--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -18,4 +18,8 @@
     <dimen name="search_icon_size">16dp</dimen>
     <dimen name="search_max_lines">1</dimen>
     <dimen name="search_cursor_width">2dp</dimen>
+    <dimen name="track_font_size">11dp</dimen>
+    <dimen name="artwork_size">45dp</dimen>
+    <dimen name="artwork_margin">8dp</dimen>
+    <dimen name="ic_size">13dp</dimen>
 </resources>
