--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,6 +14,9 @@
         <item name="trackColor">@color/track_color_light</item>
         <item name="editTextBackground">@color/edit_background_light</item>
         <item name="editTextIconColor">@color/icon_color_light</item>
+        <item name="titleTrackColor">@color/black</item>
+        <item name="infoTrackColor">@color/icon_color_light</item>
+
     </style>
 
     <style name="Theme.PlaylistMaker" parent="Base.Theme.PlaylistMaker" />
