--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+    android:id="@+id/activity_main"
+    android:background="?attr/mainActivityBackground"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    style="@style/mainActivity"
+    >
 
     <TextView
+        android:text="@string/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textColor = "@color/white"
+        style="@style/baseFont"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <Button
+        android:id="@+id/btn_search"
+        android:layout_marginTop="40dp"
+        android:text="@string/btn_search"
+        app:icon="@drawable/search"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        style="@style/buttonMenu"/>
+
+    <Button
+        android:id="@+id/btn_library"
+        android:text="@string/btn_library"
+        app:icon="@drawable/library"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        style="@style/buttonMenu"/>
+
+    <Button
+        android:id="@+id/btn_setting"
+        android:text="@string/btn_setting"
+        app:icon="@drawable/setting"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        style="@style/buttonMenu"/>
+
+</LinearLayout>
