--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,6 @@
     <color name="track_color_dark">#9FBBF3</color>
     <color name="edit_background_light">#E6E8EB</color>
     <color name="search_cursor_color">#3772E7</color>
+    <color name="color_note_light">#1A1B22</color>
+    <color name="color_note_dark">#FFFFFFFF</color>
 </resources>
