--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -22,5 +22,13 @@
     <dimen name="artwork_size">45dp</dimen>
     <dimen name="artwork_margin">8dp</dimen>
     <dimen name="ic_size">13dp</dimen>
+    <dimen name="margin_top_error">102dp</dimen>
     <dimen name="rounded_corners">2dp</dimen>
+    <dimen name="icon_error">120dp</dimen>
+    <dimen name="font_size_error">19dp</dimen>
+    <dimen name="margin_size_error">16dp</dimen>
+    <dimen name="font_size_refresh">14dp</dimen>
+    <dimen name="vertical_refresh">10dp</dimen>
+    <dimen name="horizontal_refresh">14dp</dimen>
+    <dimen name="radius_refresh">54dp</dimen>
 </resources>
