--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -55,14 +55,27 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:orientation="vertical"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp">
+        android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/main_padding_horizontal">
+
+        <TextView
+            android:id="@+id/titleHistorySearch"
+            android:text="@string/title_history_search"
+            style="@style/titleHistorySearch"/>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/trackRecyclerView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+
+        <Button
+            android:id="@+id/clearHistorySearchBtn"
+            android:text="@string/clear_history_search"
+            style="@style/cleanSearchHistoryBtn"
+            />
+
     </LinearLayout>
 
     <LinearLayout
